Custom help embed formatting

--- a/bot.env.example
+++ b/bot.env.example
@@ -1,8 +1,11 @@
 # Bot Token
 HELEUS_TOKEN=
 
-#Bot Name
+# Bot Name
 HELEUS_NAME=Cat Bot
+
+# Change default help grouping
+HELEUS_HELP_GROUP=custom
 
 # Optionally load up some cogs on boot
 HELEUS_LOAD_COGS=cogs.help,usercogs.*
