Update help description

--- a/config/help.yml
+++ b/config/help.yml
@@ -1,4 +1,4 @@
-description: Cat Bot is a Discord bot for receiving cat and dog pictures on request, written by DerpyChap.
+description: Cat Bot is a Discord bot for receiving cat and dog pictures on demand, written by DerpyChap.
 thumbnail:
     url: https://i.imgur.com/ybGMt1k.png
 fields: 
